# opip

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
src/opip/: __init__.py  __main__.py
src/opip.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
