[build-system]
requires      = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opip"
version = "0.1.0"
description = "A custom Python Package Manager"
readme = "README.md"
authors = [{ name = "Karthik", email = "notrightnow@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["opip"]
dependencies = ["pip"]
requires-python = ">=3.7"

    [project.optional-dependencies]
    build = ["build", "twine"]

    [project.scripts]
    opip = "opip.__main__:main"

    [project.urls]
    repository    = "https://github.com/karthikyeredla/opip/tree/main"
    documentation = "https://github.com/karthikyeredla/opip/tree/main"

